tests/ui/consts/const-item-without-ty/typecheck.stderr
error[E0308]: mismatched types
  --> $DIR/typecheck.rs:7:5
   |
LL |     2 + 2
   |     ^^^^^ expected `()`, found integer

error[E0308]: mismatched types
  --> $DIR/typecheck.rs:14:14
   |
LL | const _ = id(2);
   |           -- ^ expected `()`, found integer
   |           |
   |           arguments to this function are incorrect
   |
help: the return type of this call is `{integer}` due to the type of the argument passed
  --> $DIR/typecheck.rs:14:11
   |
LL | const _ = id(2);
   |           ^^^-^
   |              |
   |              this argument influences the return type of `id`
note: function defined here
  --> $DIR/typecheck.rs:10:10
   |
LL | const fn id<T>(t: T) -> T {
   |          ^^    ----

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
